文章曲面样式 动态定义title

--- a/source/404.html
+++ b/source/404.html
@@ -12,7 +12,7 @@ a{color:#428bca;text-decoration:none}
 a:hover{text-decoration:underline}
 .error-page{background:#f0f1f3;padding:80px 0 180px}
 .error-page-container{position:relative;z-index:1}
-.error-page-main{position:relative;background:#f9f9f9;margin:0 auto;width:617px;-ms-box-sizing:border-box;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;padding:50px 50px 70px}
+.error-page-main{position:relative;background:#f9f9f9;margin:0 auto;width:617px;-ms-box-sizing:border-box;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;padding:50px 50px 70px;box-shadow: 0 1px 2px rgba(0,0,0,0.4), 0 0 30px rgba(10,10,0,0.1) inset;}
 .error-page-main:before{content:'';display:block;height:7px;position:absolute;top:-7px;width:100%;left:0}
 .error-page-main h3{font-size:24px;font-weight:400;border-bottom:1px solid #d0d0d0}
 .error-page-main h3 strong{font-size:54px;font-weight:400;margin-right:20px}
@@ -23,11 +23,13 @@ a:hover{text-decoration:underline}
 .error-page-actions li{line-height:2.5em}
 .error-page-actions:before{content:'';display:block;position:absolute;z-index:-1;bottom:17px;left:50px;width:200px;height:10px;-moz-box-shadow:4px 5px 31px 11px #999;-webkit-box-shadow:4px 5px 31px 11px #999;box-shadow:4px 5px 31px 11px #999;-moz-transform:rotate(-4deg);-webkit-transform:rotate(-4deg);-ms-transform:rotate(-4deg);-o-transform:rotate(-4deg);transform:rotate(-4deg)}
 .error-page-actions:after{content:'';display:block;position:absolute;z-index:-1;bottom:17px;right:50px;width:200px;height:10px;-moz-box-shadow:4px 5px 31px 11px #999;-webkit-box-shadow:4px 5px 31px 11px #999;box-shadow:4px 5px 31px 11px #999;-moz-transform:rotate(4deg);-webkit-transform:rotate(4deg);-ms-transform:rotate(4deg);-o-transform:rotate(4deg);transform:rotate(4deg)}
+.headband{box-shadow: 0 1px 2px rgba(0,0,0,0.4), 0 0 30px rgba(10,10,0,0.1) inset;width: 619.5px; height: 2px; margin: 0 auto; border-radius: 40%; background: -webkit-linear-gradient(left, #f00, #ffa500, #ff0, #008000, #00f, #4b0082, #ee82ee);background: -o-linear-gradient(left, #f00, #ffa500, #ff0, #008000, #00f, #4b0082, #ee82ee);background: -moz-linear-gradient(left, #f00, #ffa500, #ff0, #008000, #00f, #4b0082, #ee82ee);background: linear-gradient(to right, #f00, #ffa500, #ff0, #008000, #00f, #4b0082, #ee82ee);}
 </style>
 </head>
 <body>
 <div class="error-page haorooms">
     <div class="error-page-container">
+		<div class="headband"></div>
         <div class="error-page-main">
             <h3>
                 <strong>404</strong>无法打开页面
@@ -45,6 +47,7 @@ a:hover{text-decoration:underline}
                     <h4>可以尝试：</h4>
                     <ul>
                         <li><a href="/">返回首页</a></li>
+						<li><a href="javascript:history.go(-1);">返回上一页</a></li>
                     </ul>
                 </div>
             </div>
